[package]
name = "gram-demolition"
version = "0.1.0"
authors = ["lucky <takuto.yoshikai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ofiles = "0.2.0"
nix = "0.20.0"
getopts = "*"

[[bin]]
name = "gram-demolition"
path = "src/main.rs"
